--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "1.4.3",
+    "@angular/compiler-cli": "^4.2.4",
+    "typescript": "~2.3.3",
     "@angular/animations": "^4.2.4",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
@@ -49,8 +52,7 @@
     "typescript": "~2.3.3"
   },
   "engines": {
-    "node": "6.11.1",
-    "npm": "3.10.9",
-    "@angular/cli": "1.4.3"
+    "node": "6.11.2",
+    "npm": "3.10.10"
   }
 }
